crates/fv-resolver/src/lock/snapshots/uv_resolver__lock__tests__hash_optional_present.snap
---
source: crates/fv-resolver/src/lock/mod.rs
expression: result
---
Ok(
    Lock {
        version: 1,
        revision: 0,
        fork_markers: [],
        conflicts: Conflicts(
            [],
        ),
        supported_environments: [],
        required_environments: [],
        requires_python: RequiresPython {
            specifiers: VersionSpecifiers(
                [
                    VersionSpecifier {
                        operator: GreaterThanEqual,
                        version: "3.12",
                    },
                ],
            ),
            range: RequiresPythonRange(
                LowerBound(
                    Included(
                        "3.12",
                    ),
                ),
                UpperBound(
                    Unbounded,
                ),
            ),
        },
        options: ResolverOptions {
            resolution_mode: Highest,
            prerelease_mode: IfNecessaryOrExplicit,
            fork_strategy: RequiresPython,
            exclude_newer: ExcludeNewerWire {
                exclude_newer: None,
                exclude_newer_span: None,
                exclude_newer_package: ExcludeNewerPackage(
                    {},
                ),
            },
        },
        packages: [
            Package {
                id: PackageId {
                    name: PackageName(
                        "anyio",
                    ),
                    version: Some(
                        "4.3.0",
                    ),
                    source: Registry(
                        Url(
                            UrlString(
                                "https://pypi.org/simple",
                            ),
                        ),
                    ),
                },
                sdist: None,
                wheels: [
                    Wheel {
                        url: Url {
                            url: UrlString(
                                "https://files.pythonhosted.org/packages/14/fd/2f20c40b45e4fb4324834aea24bd4afdf1143390242c0b33774da0e2e34f/anyio-4.3.0-py3-none-any.whl",
                            ),
                        },
                        hash: Some(
                            Hash(
                                HashDigest {
                                    algorithm: Sha256,
                                    digest: "048e05d0f6caeed70d731f3db756d35dcc1f35747c8c403364a8332c630441b8",
                                },
                            ),
                        ),
                        size: None,
                        upload_time: None,
                        filename: WheelFilename {
                            name: PackageName(
                                "anyio",
                            ),
                            version: "4.3.0",
                            tags: Small {
                                small: WheelTagSmall {
                                    python_tag: Python {
                                        major: 3,
                                        minor: None,
                                    },
                                    abi_tag: None,
                                    platform_tag: Any,
                                },
                            },
                        },
                        zstd: None,
                    },
                ],
                fork_markers: [],
                dependencies: [],
                optional_dependencies: {},
                dependency_groups: {},
                metadata: PackageMetadata {
                    requires_dist: {},
                    provides_extra: [],
                    dependency_groups: {},
                },
            },
        ],
        by_id: {
            PackageId {
                name: PackageName(
                    "anyio",
                ),
                version: Some(
                    "4.3.0",
                ),
                source: Registry(
                    Url(
                        UrlString(
                            "https://pypi.org/simple",
                        ),
                    ),
                ),
            }: 0,
        },
        manifest: ResolverManifest {
            members: {},
            requirements: {},
            dependency_groups: {},
            constraints: {},
            overrides: {},
            excludes: {},
            build_constraints: {},
            dependency_metadata: {},
        },
    },
)
