crates/fv-resolver/src/lock/snapshots/uv_resolver__lock__tests__source_direct_no_subdir.snap
---
source: crates/fv-resolver/src/lock/mod.rs
expression: result
---
Ok(
    Lock {
        version: 1,
        revision: 0,
        fork_markers: [],
        conflicts: Conflicts(
            [],
        ),
        supported_environments: [],
        required_environments: [],
        requires_python: RequiresPython {
            specifiers: VersionSpecifiers(
                [
                    VersionSpecifier {
                        operator: GreaterThanEqual,
                        version: "3.12",
                    },
                ],
            ),
            range: RequiresPythonRange(
                LowerBound(
                    Included(
                        "3.12",
                    ),
                ),
                UpperBound(
                    Unbounded,
                ),
            ),
        },
        options: ResolverOptions {
            resolution_mode: Highest,
            prerelease_mode: IfNecessaryOrExplicit,
            fork_strategy: RequiresPython,
            exclude_newer: ExcludeNewerWire {
                exclude_newer: None,
                exclude_newer_span: None,
                exclude_newer_package: ExcludeNewerPackage(
                    {},
                ),
            },
        },
        packages: [
            Package {
                id: PackageId {
                    name: PackageName(
                        "anyio",
                    ),
                    version: Some(
                        "4.3.0",
                    ),
                    source: Direct(
                        UrlString(
                            "https://burntsushi.net",
                        ),
                        DirectSource {
                            subdirectory: None,
                        },
                    ),
                },
                sdist: None,
                wheels: [],
                fork_markers: [],
                dependencies: [],
                optional_dependencies: {},
                dependency_groups: {},
                metadata: PackageMetadata {
                    requires_dist: {},
                    provides_extra: [],
                    dependency_groups: {},
                },
            },
        ],
        by_id: {
            PackageId {
                name: PackageName(
                    "anyio",
                ),
                version: Some(
                    "4.3.0",
                ),
                source: Direct(
                    UrlString(
                        "https://burntsushi.net",
                    ),
                    DirectSource {
                        subdirectory: None,
                    },
                ),
            }: 0,
        },
        manifest: ResolverManifest {
            members: {},
            requirements: {},
            dependency_groups: {},
            constraints: {},
            overrides: {},
            excludes: {},
            build_constraints: {},
            dependency_metadata: {},
        },
    },
)
